     falling back to its directory name if the add-on contains an outdated
     _info.cfg file lacking an [info]title= value.
   * Fixed most of the minimap buttons and the End Turn button appearing
     without contents or in the wrong state during WML start events until they
     are interacted with or control is given to the player for the first time.
 * WML engine:
   * Added customizable recall costs for unit types and individual units,
     using the new recall_cost attribute in [unit_type] and [unit].
   * Added support for [elseif] tags inside [if]
   * Schema validator messages now conform better to the new WML
     parser/preprocessor diagnostics format introduced in version 1.11.10.
 * Miscellaneous and bug fixes:
   * replace 'fight_on_without_leader'=yes/no with defeat_condition=no_leader/
     no_units/always/never which allows the wml developer to decide when a side
     is considered defeated
   * Fix Fisher-Yates implemenation of Lua helper.shuffle (bug #21706)
   * Fixed issues with the ~BG() image path function not always working with
     cached images.
   * Idle controlled sides now serialize as human controlled.
   * Fixed bug #20876: A segfault in cut_surface.
   * Changed: Dropped support for AmigaOS, BeOS, and OS/2.
   * Increased the sound mixer channel allocation from 16 to 32, thereby
     raising the limit for simultaneous sound effects from 5 to 21.
   * Fix bug #21758: "Ready not blocked while player pick faction."
   * Fix bug #18829: "ai sides show up as "controller=network" on remote
     clients". This issue is the source of some difficulties with mp campaigns
     which occur when the campaign is reloaded from a non-host side, or after a
     player rejoins from observer status. Hopefully, reloading campaigns is
     easier after this.
   * Fix bug #21797: "Mandatory WML child missing" when leaving a reloaded game.
   * Fix bug #21808: Cannot join a reloaded game as an observer.