@@ -1,0 +1,267 @@
+#textdomain wesnoth-lib
+
+[window]
+	id = "game_cache_options"
+	description = "Game data cache management dialog."
+
+	[resolution]
+		definition = "default"
+
+		click_dismiss = "true"
+		maximum_width = 600
+
+		[tooltip]
+			id = "tooltip_large"
+		[/tooltip]
+
+		[helptip]
+			id = "tooltip_large"
+		[/helptip]
+
+		[grid]
+
+			[row]
+				grow_factor = 0
+
+				[column]
+					grow_factor = 1
+
+					border = "all"
+					border_size = 5
+					horizontal_alignment = "left"
+					[label]
+						id = "title"
+						definition = "title"
+
+						label = _ "WML Cache"
+					[/label]
+
+				[/column]
+
+			[/row]
+
+			[row]
+				grow_factor = 0
+
+				[column]
+					border = "all"
+					border_size = 5
+					horizontal_alignment = "left"
+					[label]
+						definition = "default"
+
+						label = _ "Wesnoth maintains a cache of preprocessed WML data for campaigns, multiplayer scenarios, and other add-ons to speed up the loading process. The cache may be safely cleaned to free up disk space, thus removing stale files generated by older versions; or you may purge its entire contents if you are experiencing issues when loading the game data."
+						wrap = "true"
+					[/label]
+
+				[/column]
+
+			[/row]
+
+			[row]
+				grow_factor = 1
+
+				[column]
+					horizontal_grow = "true"
+
+					[grid]
+
+						[row]
+
+							[column]
+								grow_factor = 0
+
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+
+								[label]
+									definition = "default"
+
+									label = _ "Path:"
+								[/label]
+
+							[/column]
+
+							[column]
+								grow_factor = 1
+
+								border = "all"
+								border_size = 5
+								horizontal_grow = "true"
+
+								[text_box]
+									id = "path"
+									definition = "default"
+									label = ""
+								[/text_box]
+
+							[/column]
+
+							[column]
+								grow_factor = 0
+
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+
+								[button]
+									id = "copy"
+									definition = "action_copy"
+									label = _ "filesystem^Copy"
+									tooltip = _ "Copy this path to clipboard"
+								[/button]
+
+							[/column]
+
+							[column]
+								grow_factor = 0
+
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+
+								[button]
+									id = "browse"
+									definition = "action_go"
+									label = _ "filesystem^Browse"
+									tooltip = _ "Browse this location using a file manager"
+								[/button]
+
+							[/column]
+
+						[/row]
+
+					[/grid]
+
+				[/column]
+
+			[/row]
+
+			[row]
+				grow_factor = 1
+
+				[column]
+					horizontal_grow = "true"
+
+					[grid]
+
+						[row]
+
+							[column]
+								grow_factor = 0
+
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+
+								[label]
+									definition = "default"
+
+									label = _ "Size:"
+								[/label]
+
+							[/column]
+
+							[column]
+								grow_factor = 1
+
+								border = "all"
+								border_size = 5
+								horizontal_grow = "true"
+
+								[label]
+									definition = "default"
+
+									id = "size"
+									label = ""
+								[/label]
+
+							[/column]
+
+							[column]
+								horizontal_alignment = "right"
+
+								[grid]
+
+									[row]
+
+										[column]
+											border = "all"
+											border_size = 5
+
+											[button]
+												id = "clean"
+												definition = "default"
+												label = _ "cache^Clean"
+												tooltip = _ "Clear stale and unused cache files"
+											[/button]
+
+										[/column]
+
+										[column]
+											border = "all"
+											border_size = 5
+
+											[button]
+												id = "purge"
+												definition = "default"
+												label = _ "cache^Purge"
+												tooltip = _ "Purge the entire contents of the cache"
+											[/button]
+
+										[/column]
+
+									[/row]
+
+								[/grid]
+
+							[/column]
+
+						[/row]
+
+					[/grid]
+
+				[/column]
+
+			[/row]
+
+			[row]
+				grow_factor = 0
+
+				[column]
+					horizontal_alignment = "right"
+
+					[grid]
+
+						[row]
+							grow_factor = 0
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "right"
+
+								[button]
+									id = "ok"
+									definition = "default"
+
+									label = _ "OK"
+								[/button]
+
+							[/column]
+
+						[/row]
+
+					[/grid]
+
+				[/column]
+
+			[/row]
+
+
+		[/grid]
+
+	[/resolution]
+
+[/window]
