@@ -75,6 +75,7 @@ Version 1.13.0-dev:
    * Fixed most of the minimap buttons and the End Turn button appearing
      without contents or in the wrong state during WML start events until they
      are interacted with or control is given to the player for the first time.
+   * Added a new subdialog in Preferences to clean or purge the WML cache.
  * WML engine:
    * Added customizable recall costs for unit types and individual units,
      using the new recall_cost attribute in [unit_type] and [unit].
